# prsload

./: .env.example  .gitignore  .mypy.ini  Dockerfile  Makefile  README.md  config.example.yml  docker-compose.yml  example_settings.py  pr-analytics.example.yml  pyproject.toml  requirements.txt  ruff.toml
app/: app.py
prsload/: app.py  constants.py  date_utils.py  dict_utils.py  exceptions.py  extensions.py  fetch.py  github.py  home.py  pr_type.py  prs_settings.py  redis_client.py  redis_prs.py  settings.py  top_reviewer.py
prsload/duckdb_client/: __init__.py  client.py  pr_stats.py  prs.py
prsload/github/: __init__.py  client.py  github.py  gql_utils.py  prs.graphql  prs.py  repos.graphql  repos.py  response_utils.py
prsload/routes/: data_fetcher.py  home.py  top_reviewers.py
prsload/static/css/: styles.css
prsload/templates/: 404.html  base.html  data_fetcher.html  error.html  gh_errors.html  home.html  top_reviewers.html
prsload/templates/components/: header.html
prsload/templatetags/: template_filters.py
