[project]
name = "prsload"
version = "0.2.0"
description = "PR reviewers stats"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.2",
    "flask>=3.1.0,<4.0",
    "pyyaml>=6.0",
    "requests>=2.32.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["prsload*"]
exclude = ["assets*", "bin*", "venv*"]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "debugpy>=1.8.0",
    "ipdb>=0.13.13",
    "mypy>=1.14.0",
    "ruff>=0.8.4",
    "types-flask>=1.1.6",
    "types-pyyaml>=6.0.12",
    "types-redis>=4.6.0",
    "types-requests>=2.32.0.20241016",
]

[tool.black]
line-length = 118
target-version = ['py313']
